# ShootMUp

./: Game.cabal  readme.md  savedGameState.json  todo.txt
src/: Controller.hs  Main.hs  Model.hs  SupportiveFunctions.hs  View.hs
